--- a/index.html
+++ b/index.html
@@ -2,11 +2,21 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta property="og:site_name" content="Wedding Photographers | Joe &amp; Selah">
+    <meta property="og:description" content="Joe &amp;amp; Selah are some of the best wedding photographers on the eastern shore of Maryland. They love capturing photos of people in love.">
     <title>Joe and Selah | Chattanooga Wedding Photographers</title>
+    <link href="https://fonts.googleapis.com/css?family=Markazi+Text:400,700" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <div>
-      <h1>Hello World!</h1>
+    <div class="main">
+      <h1 class="header-text">Hello!</h1>
+      <p class="intro-text">If you're looking for us (Joe & Selah), then you've come to the right place. But unfortunately we've put things on pause and are no longer taking on new clients right now.</p>
+      <p class="instruction-text">If you happen to be a past client, or know a past client and need to get in touch, you can do so by sending an email to info@joeandselah.com</p>
+      <span>Thanks for stopping by!</span>
+      <span>❤️,</span>
+      <span>Joe & Selah</span>
     </div>
   </body>
 </html>
