--- a/index.html
+++ b/index.html
@@ -13,10 +13,12 @@
     <div class="main">
       <h1 class="header-text">Hello!</h1>
       <p class="intro-text">If you're looking for us (Joe & Selah), then you've come to the right place. But unfortunately we've put things on pause and are no longer taking on new clients right now.</p>
-      <p class="instruction-text">If you happen to be a past client, or know a past client and need to get in touch, you can do so by sending an email to info@joeandselah.com</p>
-      <span>Thanks for stopping by!</span>
-      <span>❤️,</span>
-      <span>Joe & Selah</span>
+      <div class="instruction-text">
+        <p>Past clients or their family & friends can get in touch by sending an email to <a href="info@joeandselah.com">info@joeandselah.com</a>.</p>
+        <span>Thanks for stopping by!</span>
+        <br>
+        <span>- Joe & Selah</span>
+      </div>
     </div>
   </body>
 </html>
