--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
   <body>
     <div class="main">
       <h1 class="header-text">Hello!</h1>
-      <p class="intro-text">If you're looking for us (Joe &amp; Selah), then you've come to the right place. But unfortunately we've put things on pause and are no longer taking on new clients right now.</p>
+      <p class="intro-text">If you're looking for us (Joe &amp; Selah), then you've come to the right place. Right now, we're working on a beautiful new place for you to view our work, so hang tight!.</p>
       <div class="instruction-text">
-        <p>Past clients or their family &amp; friends can get in touch by sending an email to <a href="info@joeandselah.com">info@joeandselah.com</a>.</p>
+        <p>While you wait, why don't you send a message to <a href="mailto:info@joeandselah.com">info@joeandselah.com</a>.</p>
         <span>Thanks for stopping by!</span>
         <br>
         <span>- Joe &amp; Selah</span>
