--- a/index.html
+++ b/index.html
@@ -10,11 +10,16 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
+    <div class="header-wrapper">
+      <div class="header-container">
+        <h1 class="header-text">Hello!</h1>
+        <img class="header-img" src="gc-2.jpg" alt="A couple on their wedding day, by Joe and Selah">
+      </div>
+    </div>
     <div class="main">
-      <h1 class="header-text">Hello!</h1>
-      <p class="intro-text">If you're looking for us (Joe &amp; Selah), then you've come to the right place. Right now, we're working on a beautiful new place for you to view our work, so hang tight!.</p>
+      <p class="intro-text" style="margin: 0">If you're looking for us (Joe &amp; Selah Photography), then you've come to the right place. Right now, we're working on a beautiful new place for you to view our work, so hang tight!.</p>
       <div class="instruction-text">
-        <p>While you wait, why don't you send a message to <a href="mailto:info@joeandselah.com">info@joeandselah.com</a>.</p>
+        <p>While you wait, why don't you check out <a href="https://www.facebook.com/joeandselahphotography/">our work on Facebook</a> and send a message to <a href="mailto:info@joeandselah.com">info@joeandselah.com</a>.</p>
         <span>Thanks for stopping by!</span>
         <br>
         <span>- Joe &amp; Selah</span>
