--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </div>
     </div>
     <div class="main">
-      <p class="intro-text" style="margin: 0">If you're looking for us (Joe &amp; Selah Photography), then you've come to the right place. Right now, we're working on a beautiful new place for you to view our work, so hang tight!.</p>
+      <p class="intro-text" style="margin: 0">If you're looking for us (Joe &amp; Selah Photography), then you've come to the right place. Right now, we're working on a beautiful new place for you to view our work, so hang tight!</p>
       <div class="instruction-text">
         <p>While you wait, why don't you check out <a href="https://www.facebook.com/joeandselahphotography/">our work on Facebook</a> and send a message to <a href="mailto:info@joeandselah.com">info@joeandselah.com</a>.</p>
         <span>Thanks for stopping by!</span>
