--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta property="og:site_name" content="Wedding Photographers | Joe &amp; Selah">
+    <meta property="og:title" content="Eastern Shore Wedding Photographers | Joe &amp; Selah">
+    <meta property="title" name="title" content="Eastern Shore Wedding Photographers | Joe &amp; Selah">
+    <meta property="og:site_name" content="Eastern Shore Wedding Photographers | Joe &amp; Selah">
     <meta property="og:description" content="Joe &amp;amp; Selah are some of the best wedding photographers on the eastern shore of Maryland. They love capturing photos of people in love.">
-    <title>Joe and Selah | Chattanooga Wedding Photographers</title>
+    <meta property="description" name="description" content="Joe &amp;amp; Selah are some of the best wedding photographers on the eastern shore of Maryland. They love capturing photos of people in love.">
+    <meta name="google-site-verification" content="LoXw5I5OHRNHhnp_Hci1LZoYXQ0zT6cOw7PbZxlrrZ0" />
+    <title>Joe and Selah | Eastern Shore Wedding Photographers</title>
     <link href="https://fonts.googleapis.com/css?family=Markazi+Text:400,700" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
   </head>
