--- a/index.html
+++ b/index.html
@@ -1,33 +1,1 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta property="og:title" content="Eastern Shore Wedding Photographers | Joe &amp; Selah">
-    <meta property="title" name="title" content="Eastern Shore Wedding Photographers | Joe &amp; Selah">
-    <meta property="og:site_name" content="Eastern Shore Wedding Photographers | Joe &amp; Selah">
-    <meta property="og:description" content="Joe &amp;amp; Selah are some of the best wedding photographers on the eastern shore of Maryland. They love capturing photos of people in love.">
-    <meta property="description" name="description" content="Joe &amp;amp; Selah are some of the best wedding photographers on the eastern shore of Maryland. They love capturing photos of people in love.">
-    <meta name="google-site-verification" content="LoXw5I5OHRNHhnp_Hci1LZoYXQ0zT6cOw7PbZxlrrZ0" />
-    <title>Joe and Selah | Eastern Shore Wedding Photographers</title>
-    <link href="https://fonts.googleapis.com/css?family=Markazi+Text:400,700" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
-  </head>
-  <body>
-    <div class="header-wrapper">
-      <div class="header-container">
-        <h1 class="header-text">Hello!</h1>
-        <img class="header-img" src="gc-2.jpg" alt="A couple on their wedding day, by Joe and Selah">
-      </div>
-    </div>
-    <div class="main">
-      <p class="intro-text" style="margin: 0">If you're looking for us (Joe &amp; Selah Photography), then you've come to the right place. Right now, we're working on a beautiful new place for you to view our work, so hang tight!</p>
-      <div class="instruction-text">
-        <p>While you wait, why don't you check out <a href="https://www.facebook.com/joeandselahphotography/">our work on Facebook</a> and send a message to <a href="mailto:info@joeandselah.com">info@joeandselah.com</a>.</p>
-        <span>Thanks for stopping by!</span>
-        <br>
-        <span>- Joe &amp; Selah</span>
-      </div>
-    </div>
-  </body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta property="og:title" content="Chattanooga Wedding Photographers | Joe & Selah"/><meta property="title" name="title" content="Chattanooga Wedding Photographers | Joe & Selah"/><meta property="og:site_name" content="Chattanooga Wedding Photographers | Joe & Selah"/><meta property="og:description" content="Joe & Selah are some of the best wedding photographers in Chattanooga, TN."/><meta property="description" name="description" content="Joe & Selah are Chattanooga wedding photographers. Offering documentary-style wedding and engagement photography in the Chattanooga, TN area."/><link href="https://fonts.googleapis.com/css?family=Markazi+Text:400,700" rel="stylesheet"/><link rel="apple-touch-icon" href="/logo192.png"/><link rel="manifest" href="/manifest.json"/><title>Joe & Selah | Chattanooga Wedding Photographers</title><script defer="defer" src="/static/js/main.b8b97afd.js"></script><link href="/static/css/main.98789d76.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div><div id="modal-root"></div></body></html>
