Update image tag.

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
       name="description"
       content="Joe & Selah are Chattanooga wedding photographers. Offering documentary-style wedding and engagement photography in the Chattanooga, TN area."
     />
-    <meta property="og:image" content=”%PUBLIC_URL%/FranklinKristin-1.jpg” />
+    <meta property="og:image" content="%PUBLIC_URL%/FranklinKristin.jpg" />
     <link
       href="https://fonts.googleapis.com/css?family=Markazi+Text:400,700"
       rel="stylesheet"
